--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./vigenere-cipher.js"></script>
+    <script src="./what-season.js"></script>
 </body>
 </html>
